change toList() sorted to privateMTGProvider